--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -5,6 +5,13 @@ font-family: 'Rubik', sans-serif;
 font-family: 'Roboto Mono', monospace;
 */
 
+/*@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400|Rock+Salt');*/
+
+/*
+font-family: 'Rock Salt', cursive;
+font-family: 'Open Sans', sans-serif;
+*/
+
 body{
     height: 100%;
     width:100%;
@@ -13,22 +20,27 @@ body{
 
 h1,h2,h3,h4,h5{
     font-family: 'Rubik', sans-serif;
+/*    font-family: 'Rock Salt', cursive;*/
 }
 
+/*
 #headline{
     margin-top: -20px;
 }
+*/
 
 h1{
+  padding-top: 10px;
+  padding-bottom:50px;    
   text-transform: uppercase;
   letter-spacing: -0.1em;
-  font-size: 130px;
+  font-size: 230px;
   text-align: center;
   margin: auto;
   position: relative;
-  top: 10vh;
-  z-index: 20;
-  color: #bc1818;
+/*  top: 10vh;*/
+/*  z-index: 20;*/
+  color: rgba(166, 16, 46, 0.84);
 }
 
 .help {
@@ -40,7 +52,7 @@ h1{
   display: block;
   z-index: 10;
   position: relative;
-  padding-top: 20px;
+  margin-top:20px;
 }
 
 .brick-bg{
@@ -59,9 +71,8 @@ h1{
 }
 
 .bg2{
-    background-image: url(../images/concrete_wall_2.png);
+    background-color: #ffffff;
     height: auto;
-    background: cover;
     width: 100%;
 }
 div{ 
@@ -74,12 +85,11 @@ div{
 }
 p{
   font-family: 'Roboto Mono', monospace;
-  text-align: justify;
+/*    font-family: 'Open Sans', sans-serif;*/
   max-width: 450px;
-  font-size: 24px;
-  line-height: 44px;
+  font-size: 16px;
+  line-height: 24px;
   margin: auto;
-  margin-top: 2rem;
   padding: 1rem;
 }
 .line-out{
@@ -87,7 +97,8 @@ p{
     
 }
 nav {
-    font-size: 16px;
+    font-size: 14px;
+/*    font-family: 'Open Sans', sans-serif;*/
     font-family: 'Roboto Mono', monospace;
     color: #000000;
     background-color: rgba(0, 0, 0, 0);
@@ -121,10 +132,12 @@ nav a {
 */
 }
 
-
+.scroll-arrow{
+    margin-top: -30px;
+}
 
 .scroll{
-    margin-top: -20px;
+    margin-top: -40px;
     line-height: 3;
     text-decoration: underline;
     font-size: 14px;
@@ -242,14 +255,7 @@ border-bottom-right-radius: 8px;
 
 .modal {
     background-color: #e0e0e0;
-    padding: 0;
-    max-height: 70%;
-    width: 55%;
-    margin: auto;
-    overflow-y: auto;
-    border-top-left-radius: 20px;
     
-    border-bottom-left-radius: 20px;
   
     
 }
@@ -257,7 +263,6 @@ border-bottom-right-radius: 8px;
 .modtext-para{
     font-size: 14px;
     line-height: 23px;
-    width: 650px;
     
 }
 
@@ -289,3 +294,189 @@ border-bottom-right-radius: 8px;
 }
 
 
+.fader{
+    position: relative;
+    padding-top: 60%;
+    overflow: hidden;
+}
+
+.fader .slide{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    z-index: 1;
+    opacity: 0;
+}
+ 
+.fader img.slide{
+    height: auto;
+}
+
+.fader .prev,
+.fader .next{
+  position: absolute;
+  height: 80px;
+  line-height: 55px;
+  width: 50px;
+  font-size: 100px;
+  text-align: center;
+  color: #fff;
+  top: 50%;
+  left: 0;
+  z-index: 4;
+  margin-top: -25px;
+  cursor: pointer;
+  opacity: .7;
+  transition: all 150ms;
+}
+
+.fader .prev:hover,
+.fader .next:hover{
+  opacity: 1;
+}
+
+.fader .next{
+  left: auto;
+  right: 0;
+}
+
+.fader .pager_list{
+  position: absolute;
+  width: 100%;
+  height: 40px;
+  line-height: 40px;
+  bottom: 0;
+  text-align: center;
+  z-index: 4;
+}
+
+.fader .pager_list li{
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  margin: 0 7px;
+  background: #fff;
+  opacity: .7;
+  text-indent: -999px;
+  border-radius: 999px;
+  cursor: pointer;
+  transition: all 150ms;
+}
+
+.fader .pager_list li:hover,
+.fader .pager_list li.active{
+  opacity: 1;
+}
+
+.z-depth-1, nav, .collapsible, .side-nav {
+     box-shadow: none !important; 
+}
+
+
+#sidenav-overlay {
+ 
+    z-index: 996;
+}
+
+.pic1-bg{
+margin-top: 20px;
+background-image: url(../images/pic16.jpg);
+height: 100vh;
+    width: 100%;
+background-position: center center;
+background-repeat: no-repeat;
+background-attachment: fixed;
+background-size: cover;
+border-top-left-radius: 8px;
+border-top-right-radius: 8px;
+border-bottom-left-radius: 8px;
+border-bottom-right-radius: 8px;
+}
+
+.fixd-info{
+    
+    margin-left: 20px;
+    background-color: rgba(0, 0, 0, 0.45);
+    margin-top: 285px;
+    position: relative;
+    height: 435px;
+    width: 450px;
+    border-top-left-radius:8px;
+border-top-right-radius: 8px;
+border-bottom-left-radius: 8px;
+border-bottom-right-radius: 8px;
+     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    
+}
+.fixd-info-p{
+    margin: 0 auto;
+  position: relative;
+   padding: 30px;
+   font-size: 14px;
+   font-weight: 400;
+}
+.pic2-bg{
+margin-bottom: 20px;
+margin-top:20px;
+background-image: url(../images/pic11.jpg);
+height: 140vh;
+width: 100%;
+/*background-position: center center;*/
+background-repeat: no-repeat;
+background-attachment: fixed;
+background-size: cover;
+border-top-left-radius: 8px;
+border-top-right-radius: 8px;
+border-bottom-left-radius: 8px;
+border-bottom-right-radius: 8px;
+}
+
+.fixd-info-2{
+     
+    margin-right: 30px;
+    background-color: rgba(0, 0, 0, 0.45);
+    margin-top: 300px;
+    position: relative;
+    height: 330px;
+    width: 450px;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19),
+    0 6px 6px rgba(0, 0, 0, 0.23);
+}
+
+
+.fixd-hdl1{
+    padding-top: 15px;
+    margin-bottom:-10px;
+     color: #0d95eb;
+    font-size: 50px;
+    
+}
+
+
+.fixd-hdl{
+    margin-bottom: -10px;
+     color: #0d95eb;
+    font-size: 50px;
+}
+
+
+
+.slider .indicators .indicator-item.active {
+    background-color: #444;
+}
+
+.apester-media{
+    
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19),
+    0 6px 6px rgba(0, 0, 0, 0.23);
+    
+}
