--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -12,6 +12,10 @@ font-family: 'Rock Salt', cursive;
 font-family: 'Open Sans', sans-serif;
 */
 
+.custom-cursor{
+    cursor:url('../images/spray.png'), auto;    
+}
+
 body{
     height: 100%;
     width:100%;
@@ -477,6 +481,77 @@ border-bottom-right-radius: 8px;
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19),
-    0 6px 6px rgba(0, 0, 0, 0.23);
+    0 6px 6px rgba(0, 0, 0, 0.23);  
+}
+
+.gallery {
+    width: 100%;
+    border: none;
+}
+
+.material-icons {
+
+    font-size: 32px !important;
+
+}
+
+
+.tweets{
+    width: 80%;
     
+}
+
+.comments{
+  background: #fff;
+  padding: 20px 30px;
+  font-size: 14px;
+}
+.comments h3{
+  color: #000;
+  font-weight: 700;
+  font-size: 22px;
+  text-align: center;
+  margin-bottom: 15px;
+}
+.comment-view {
+  margin-bottom: 20px;
+}
+.comment-view img{
+  border-radius: 50%;
+  width: 60px;
+  float: left;
+  margin-right: 10px;
+  margin-top:10px;
+}
+.comment-view h4{
+  display: inline-block;
+  font-weight: 700;
+  color: black;
+  margin-right: 15px;
+  margin-bottom: 5px;
+  
+}
+.comment-view span span{
+  display: inline-block;
+  border-radius: 50%;
+  border: 3px solid grey;
+  vertical-align: middle;
+  margin-right: 15px;
+}
+.comment-view span{
+  font-size: 12px;
+}
+.comment-view p{
+  margin-left: 70px;
+}
+.bg3{
+    background-color: #e6e6e6;
+    padding-bottom: 25px;
+}
+
+.grey-text.text-lighten-3 {
+    color: #eeeeee !important;
+}
+.grey-text.text-lighten-3:hover {
+    color: #bc1818 !important;
 }
